--- a/index.html
+++ b/index.html
@@ -241,32 +241,36 @@
                             P.</b>,
                         Pimentel, M., & Khan, S. (2024, November). Beyond Fine-tuning: Unleashing the Potential of
                         Continuous Pretraining for Clinical LLMs. <em>In Findings of the Association for Computational
-                            Linguistics: EMNLP 2024</em> (pp. 10549-10561). <a
+                            Linguistics: EMNLP 2024 (pp. 10549-10561).</em> <a
                             href="https://aclanthology.org/2024.findings-emnlp.618/" target="_blank">PDF</a></p>
                 </div>
 
                 <div class="publication">
                     <p class="publication-text">Christophe, C., <b>Kanithi, P. K.</b>, Munjal, P., Raha, T., Hayat, N.,
                         Rajan, R., ... & Khan, S. (2024). Med42--Evaluating Fine-Tuning Strategies for Medical LLMs:
-                        Full-Parameter vs. Parameter-Efficient Approaches. <em>(Accepted at AAAI Clinical LLM
-                            symposium)</em> <a href="https://arxiv.org/abs/2404.14779" target="_blank">PDF</a> | <a
+                        Full-Parameter vs. Parameter-Efficient Approaches. <em>AAAI Clinical LLM
+                            symposium.</em> <a href="https://arxiv.org/abs/2404.14779" target="_blank">PDF</a> | <a
                             href="https://huggingface.co/spaces/m42-health/med42-70b" target="_blank">Model</a></p>
                 </div>
 
                 <div class="publication">
-                    <p class="publication-text"><b>Kanithi, Praveenkumar</b>, et al. "Interactive image segmentation
-                        of MARS datasets using bag of features." <em>IEEE Transactions on Radiation and Plasma Medical
-                            Sciences 5.4 (2020)</em>: 559-567. <a href="https://ieeexplore.ieee.org/document/9225700/"
+                    <p class="publication-text"><b>Kanithi, P.</b>, De Ruiter, N. J., Amma, M. R., Lindeman, R. W.,
+                        Butler, A.
+                        P., Butler, P. H., ... & Younger, W. R. (2020). <em>Interactive image segmentation of MARS
+                            datasets
+                            using bag of features. IEEE transactions on radiation and plasma medical sciences, 5(4),
+                            559-567</em>. <a href="https://ieeexplore.ieee.org/document/9225700/"
                             target="_blank">PDF</a></p>
                 </div>
 
                 <div class="publication">
-                    <p class="publication-text"><b>Kanithi, Praveenkumar</b>, Jyotirmoy Chatterjee, and Debdoot Sheet.
-                        "Immersive augmented reality system for assisting needle positioning during ultrasound guided
-                        intervention." <em>Proceedings of the Tenth Indian Conference on Computer Vision, Graphics and
-                            Image
-                            Processing. 2016</em>. <a href="https://dl.acm.org/doi/abs/10.1145/3009977.3010023"
-                            target="_blank">PDF</a></p>
+                    <p class="publication-text"><b>Kanithi, P. K.</b>, Chatterjee, J., & Sheet, D. (2016, December).
+                        Immersive
+                        augmented reality system for assisting needle positioning during ultrasound guided intervention.
+                        <em>In Proceedings of the Tenth Indian Conference on Computer Vision, Graphics and Image
+                            Processing (pp. 1-8)</em>. <a href="https://dl.acm.org/doi/abs/10.1145/3009977.3010023"
+                            target="_blank">PDF</a>
+                    </p>
                 </div>
             </section>
         </main>
