--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="container">
         <header class="header">
             <h1 class="name">Praveenkumar Kanithi</h1>
-            <p class="title">Machine Learning Researcher</p>
+            <p class="title">Clnical AI Researcher</p>
         </header>
 
         <nav class="navigation">
