--- a/index.html
+++ b/index.html
@@ -205,7 +205,8 @@
                     <p class="publication-text">Maslenkova, S., Christophe, C., Pimentel, M. A., ... <b>Kanithi,
                             P.</b> Building Trust in Clinical Analysis: Bias Analysis and Dataset Transparency.
                         <em>EMNLP 2025
-                            (Accepted)</em>. <a href="#" target="_blank">PDF</a> | <a href="#"
+                            (Accepted)</em>. <a href="https://aclanthology.org/2025.emnlp-main.1174/"
+                            target="_blank">PDF</a> | <a href="https://huggingface.co/datasets/m42-health/HC4"
                             target="_blank">Dataset</a>
                     </p>
                 </div>
